<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/loginRootLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/BU3"
        android:background="@color/transparent"
        app:titleTextColor="@color/sandstone"/>

    <TextView
        android:id="@+id/contoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginBottom="@dimen/BU5"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/sandstone"
        android:textSize="33sp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contoTitle"
        android:layout_marginBottom="@dimen/BU4"
        android:layout_marginLeft="@dimen/BU7"
        android:layout_marginRight="@dimen/BU7"
        android:textColor="@color/greyish"
        android:textColorHint="@color/greyish">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/greyish"
            android:textSize="@dimen/text_size_xbig"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailInput"
        android:layout_marginBottom="@dimen/BU5"
        android:layout_marginLeft="@dimen/BU7"
        android:layout_marginRight="@dimen/BU7"
        android:textColor="@color/greyish"
        android:textColorHint="@color/greyish">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/greyish"
            android:textSize="@dimen/text_size_xbig"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_below="@+id/passwordInput"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="@dimen/BU7"
        android:layout_marginRight="@dimen/BU7"
        android:paddingBottom="@dimen/BU3"
        android:paddingTop="@dimen/BU3"
        android:text="@string/login_button_text"
        android:textAllCaps="false"
        android:textColor="@color/black_five"
        android:textSize="@dimen/text_size_big"/>

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/create_account_button_text"
        android:textColor="@color/pinkish_grey"
        android:textSize="16sp"/>

</RelativeLayout>