<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/registerAccountRootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/transparent"
        app:titleTextColor="@color/sandstone">

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_new_account_title"
            android:textColor="@color/sandstone"
            android:textSize="@dimen/text_size_large" />

    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/registerAccountInputsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/BU4"
            android:layout_marginTop="@dimen/BU5"
            android:layout_marginRight="@dimen/BU4"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/personalInformationLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:text="@string/personal_information_hint"
                    android:textColor="@color/fawn"
                    android:textSize="17sp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/firstNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="27dp"
                    android:textColor="@color/greyish"
                    android:textColorHint="@color/greyish"
                    android:textSize="@dimen/text_size_xbig">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name_hint"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/greyish"
                        android:textSize="@dimen/text_size_xbig" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lastNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="27dp"
                    android:textColor="@color/greyish"
                    android:textColorHint="@color/greyish"
                    android:textSize="@dimen/text_size_xbig">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name_hint"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/greyish"
                        android:textSize="@dimen/text_size_xbig" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phoneInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="27dp"
                    android:textColor="@color/greyish"
                    android:textColorHint="@color/greyish"
                    android:textSize="@dimen/text_size_xbig">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_hint"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/greyish"
                        android:textSize="@dimen/text_size_xbig" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/mailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="27dp"
                    android:textColor="@color/greyish"
                    android:textColorHint="@color/greyish"
                    android:textSize="@dimen/text_size_xbig">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/greyish"
                        android:textSize="@dimen/text_size_xbig" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="27dp"
                    android:textColor="@color/greyish"
                    android:textColorHint="@color/greyish"
                    android:textSize="@dimen/text_size_xbig">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:textColor="@color/greyish"
                        android:textSize="@dimen/text_size_xbig" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/retypePasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="27dp"
                    android:textColor="@color/greyish"
                    android:textColorHint="@color/greyish"
                    android:textSize="@dimen/text_size_xbig">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/retype_password_hint"
                        android:inputType="textPassword"
                        android:textColor="@color/greyish"
                        android:textSize="@dimen/text_size_xbig" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/createMyAccountButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/BU6"
                    android:paddingLeft="@dimen/BU6"
                    android:paddingTop="@dimen/BU4"
                    android:paddingRight="@dimen/BU6"
                    android:paddingBottom="@dimen/BU4"
                    android:text="@string/create_my_account_hint"
                    android:textAllCaps="false"
                    android:textColor="@color/black_five"
                    android:textSize="@dimen/text_size_big" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>